--- a/po/nn.po
+++ b/po/nn.po
@@ -1,20 +1,21 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Translation of lxtask to Norwegian Nynorsk
+# Copyright © 2009 Karl Ove Hufthammer <karl@huftis.org>
+# This file is distributed under the same license as the lxtask package.
+# Karl Ove Hufthammer <karl@huftis.org>, 2009.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2009-07-27 19:46+0200\n"
+"PO-Revision-Date: 2009-07-27 20:42+0200\n"
+"Last-Translator: Karl Ove Hufthammer <karl@huftis.org>\n"
+"Language-Team: Norwegian Nynorsk <i18n-nn@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Lokalize 0.3\n"
 
 #: ../src/xfce-taskmanager-linux.c:303
 #, c-format
@@ -23,178 +24,195 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Klarte ikkje senda signalet %d til oppgåva med ID-en %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "Klarte ikkje setja prioriteten %d til oppgåva med ID-en %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr ""
+msgstr "Er du sikker på at du vil drepa oppgåva?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr ""
+msgstr "Er du sikker på at du vil avslutta oppgåva?"
 
-#: ../src/functions.c:142
+#: ../src/functions.c:144
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr ""
+msgstr "Minne: %d MB av %d MB brukt"
 
-#: ../src/functions.c:148
+#: ../src/functions.c:150
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "Prosessorbruk: %0.0f %%"
 
-#: ../src/interface.c:53
+#: ../src/interface.c:58
 msgid "Task Manager"
-msgstr ""
+msgstr "Oppgåvestyring"
 
-#: ../src/interface.c:66
+#: ../src/interface.c:71
 msgid "_File"
-msgstr ""
+msgstr "_Fil"
 
-#: ../src/interface.c:74
+#: ../src/interface.c:79
 msgid "_View"
-msgstr ""
+msgstr "_Vis"
 
-#: ../src/interface.c:80
+#: ../src/interface.c:85
 msgid "_Help"
-msgstr ""
+msgstr "_Hjelp"
 
-#: ../src/interface.c:104
+#: ../src/interface.c:109
 msgid "cpu usage"
-msgstr ""
+msgstr "prosessorbruk"
 
-#: ../src/interface.c:112
+#: ../src/interface.c:117
 msgid "memory usage"
-msgstr ""
+msgstr "minnebruk"
 
-#: ../src/interface.c:140
+#: ../src/interface.c:145
 msgid "more details"
-msgstr ""
+msgstr "detaljar"
 
-#: ../src/interface.c:166
+#: ../src/interface.c:171
 msgid "Command"
-msgstr ""
+msgstr "Kommando"
 
-#: ../src/interface.c:172
+#: ../src/interface.c:177
 msgid "User"
-msgstr ""
+msgstr "Brukar"
 
-#: ../src/interface.c:178
+#: ../src/interface.c:186
 msgid "CPU%"
-msgstr ""
+msgstr "Prosessor-%"
 
-#: ../src/interface.c:184
+#: ../src/interface.c:192
 msgid "RSS"
-msgstr ""
+msgstr "RSS"
 
-#: ../src/interface.c:190
+#: ../src/interface.c:198
 msgid "VM-Size"
-msgstr ""
+msgstr "VM-storleik"
 
-#: ../src/interface.c:196
+#: ../src/interface.c:204
 msgid "PID"
-msgstr ""
+msgstr "PID"
 
-#: ../src/interface.c:202
+#: ../src/interface.c:210
 msgid "State"
-msgstr ""
+msgstr "Tilstand"
 
-#: ../src/interface.c:208
+#: ../src/interface.c:216
 msgid "Prio"
-msgstr ""
+msgstr "Prioritert"
 
-#: ../src/interface.c:214
+#: ../src/interface.c:222
 msgid "PPID"
-msgstr ""
+msgstr "PPID"
 
-#: ../src/interface.c:230
+#: ../src/interface.c:238
 msgid "Stop"
-msgstr ""
+msgstr "Stopp"
 
-#: ../src/interface.c:235
+#: ../src/interface.c:243
 msgid "Continue"
-msgstr ""
+msgstr "Hald fram"
 
-#: ../src/interface.c:240
+#: ../src/interface.c:248
 msgid "Term"
-msgstr ""
+msgstr "Avslutt"
 
-#: ../src/interface.c:245
+#: ../src/interface.c:253
 msgid "Kill"
-msgstr ""
+msgstr "Drep"
 
-#: ../src/interface.c:250
+#: ../src/interface.c:258
 msgid "Priority"
-msgstr ""
+msgstr "Prioritet"
 
-#: ../src/interface.c:263
+#: ../src/interface.c:271
 msgid "  -10"
-msgstr ""
+msgstr "  −10"
 
-#: ../src/interface.c:268
+#: ../src/interface.c:276
 msgid "  -5"
-msgstr ""
+msgstr "  −5"
 
-#: ../src/interface.c:273
+#: ../src/interface.c:281
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
-#: ../src/interface.c:278
+#: ../src/interface.c:286
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
-#: ../src/interface.c:283
+#: ../src/interface.c:291
 msgid "   10"
-msgstr ""
-
-#: ../src/interface.c:306
-msgid "Show user tasks"
-msgstr ""
-
-#: ../src/interface.c:311
-msgid "Show root tasks"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:316
-msgid "Show other tasks"
-msgstr ""
+msgid "Show user tasks"
+msgstr "Vis brukaroppgåver"
 
 #: ../src/interface.c:321
-msgid "Show memory used by cache as free"
-msgstr ""
+msgid "Show root tasks"
+msgstr "Vis rotoppgåver"
 
-#: ../src/interface.c:342
+#: ../src/interface.c:326
+msgid "Show other tasks"
+msgstr "Vis andre oppgåver"
+
+#: ../src/interface.c:331
+msgid "Show memory used by cache as free"
+msgstr "Vis minne brukt av cache som ledig"
+
+#: ../src/interface.c:362
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask er utvikla frå Xfce4-oppgåvestyraren, laga av:\n"
+"  – Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
-#: ../src/interface.c:347
+#: ../src/interface.c:367
 msgid "translator-credits"
-msgstr ""
+msgstr "Karl Ove Hufthammer"
 
-#: ../src/interface.c:355
+#: ../src/interface.c:375
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
-#: ../src/interface.c:357
+#: ../src/interface.c:377
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Copyright © 2008 LXDE team"
 
-#: ../src/interface.c:358
+#: ../src/interface.c:378
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Lett oppgåvestyrar for LXDE"
+
+#: ../src/interface.c:578
+msgid "Preferences"
+msgstr "Innstillingar"
+
+#: ../src/interface.c:582
+msgid "General"
+msgstr "Generelt"
+
+#: ../src/interface.c:583
+msgid "Refresh rate (seconds):"
+msgstr "Oppfriskingsrate (sekund):"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Feil"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Stadfest"
