--- a/po/sr.po
+++ b/po/sr.po
@@ -1,20 +1,21 @@
-# SOME DESCRIPTIVE TITLE.
+# Serbian translation for LXTask package
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# This file is distributed under the same license as the LXTask package.
+# Jay A. Fleming <tito.nehru.naser@gmail.com>, 2009.
 #
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: LXTask x\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-15 21:20+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2009-09-08 15:36+0100\n"
+"Last-Translator: Jay A. Fleming <tito.nehru.naser@gmail.com>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: ../src/xfce-taskmanager-linux.c:303
 #, c-format
@@ -23,178 +24,187 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Не може се послати %d сигнал до процеса са ИБ %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "Не може се поставити приоритет %d за процес са ИБ %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr ""
+msgstr "Желите ли да убијете овај процес?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr ""
+msgstr "Желите ли да зауставите овај процес?"
 
 #: ../src/functions.c:142
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr ""
+msgstr "Меморија: Искоришћено је %d МБ од укупно %d МБ"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "Стање процесора: %0.0f %%"
 
 #: ../src/interface.c:53
 msgid "Task Manager"
-msgstr ""
+msgstr "Праћење система"
 
 #: ../src/interface.c:66
 msgid "_File"
-msgstr ""
+msgstr "_Датотека"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr ""
+msgstr "П_реглед"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr ""
+msgstr "_Помоћ"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
-msgstr ""
+msgstr "стање процесора"
 
 #: ../src/interface.c:112
 msgid "memory usage"
-msgstr ""
+msgstr "стање меморије"
 
 #: ../src/interface.c:140
 msgid "more details"
-msgstr ""
+msgstr "Прикажи више детаља"
 
 #: ../src/interface.c:166
 msgid "Command"
-msgstr ""
+msgstr "Име процеса"
 
 #: ../src/interface.c:172
 msgid "User"
-msgstr ""
+msgstr "Корисник"
 
 #: ../src/interface.c:178
 msgid "CPU%"
-msgstr ""
+msgstr "% Процесор"
 
 #: ../src/interface.c:184
 msgid "RSS"
-msgstr ""
+msgstr "Стварна вел. меморије"
 
 #: ../src/interface.c:190
+#, fuzzy
 msgid "VM-Size"
-msgstr ""
+msgstr "Вел. вирт. меморије"
 
 #: ../src/interface.c:196
 msgid "PID"
-msgstr ""
+msgstr "ИБ"
 
 #: ../src/interface.c:202
 msgid "State"
-msgstr ""
+msgstr "Стање"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "Приоритет"
 
 #: ../src/interface.c:214
 msgid "PPID"
-msgstr ""
+msgstr "ИБ-Р"
 
 #: ../src/interface.c:230
 msgid "Stop"
-msgstr ""
+msgstr "Privremeno заустави процес"
 
 #: ../src/interface.c:235
 msgid "Continue"
-msgstr ""
+msgstr "Настави процес"
 
 #: ../src/interface.c:240
 msgid "Term"
-msgstr ""
+msgstr "Заустави процес"
 
 #: ../src/interface.c:245
 msgid "Kill"
-msgstr ""
+msgstr "Убиј процес"
 
 #: ../src/interface.c:250
 msgid "Priority"
-msgstr ""
+msgstr "Промени приоритет"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
-msgstr ""
+msgstr "Прикажи корисничке процесе"
 
 #: ../src/interface.c:311
 msgid "Show root tasks"
-msgstr ""
+msgstr "Прикажи администраторске процесе"
 
 #: ../src/interface.c:316
 msgid "Show other tasks"
-msgstr ""
+msgstr "Прикажи остале процесе"
 
 #: ../src/interface.c:321
 msgid "Show memory used by cache as free"
-msgstr ""
+msgstr "Прикажи оставу као слободну меморију"
 
 #: ../src/interface.c:342
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"Програм „LXTask“ је изведен из „Xfce4 Task Manager“ програма.\n"
+"  Приредио: Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
-msgstr ""
+msgstr "Serbian (sr) — Jay A. Fleming <tito.nehru.naser@gmail.com>"
 
 #: ../src/interface.c:355
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "LXDE тим — 2008-2009. Сва права задржана."
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Лагани управљач послова за LXDE радно окружење"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Грешка"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Потврдa"
+
+
+ 	  	 
