--- a/po/ca.po
+++ b/po/ca.po
@@ -1,17 +1,16 @@
-# Catalan translation of xfce4-taskmanager.
-# Copyright (C) 2005, 2006 Johannes Zellner
-# This file is distributed under the same license as the xfce4-taskmanager package.
-# Pau Ruŀlan Ferragut <paurullan@bulma.net>, 2006.
-#
+# lxtask.po CATALAN TRANSLATION
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2006-09-18 16:28+0200\n"
-"Last-Translator: Pau Ruŀlan Ferragut <paurullan@bulma.net>\n"
-"Language-Team: Catalan\n"
+"POT-Creation-Date: 2009-06-22 22:47+0200\n"
+"PO-Revision-Date: 2009-09-14 00:47+0100\n"
+"Last-Translator: \n"
+"Language-Team: LXDE Catalan translators group\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -23,46 +22,48 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"No s'ha pogut enviar el senyal %d al procés amb ID %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "No s'ha pogut definir la prioritat %d al procés amb ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr ""
+msgstr "Voleu aturar aquesta tasca?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr ""
+msgstr "Voleu finalitzar aquesta tasca?"
 
 #: ../src/functions.c:142
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr ""
+msgstr "Memòria: s'estan emprant %d MB de %d MB"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "Utilització del processador: %0.0f %%"
 
 #: ../src/interface.c:53
-#, fuzzy
 msgid "Task Manager"
-msgstr "xfce4-taskmanager"
+msgstr "Gestor de tasques"
 
 #: ../src/interface.c:66
 msgid "_File"
-msgstr ""
+msgstr "_Fitxer"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr ""
+msgstr "_Vista"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr ""
+msgstr "_Ajuda"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
@@ -106,7 +107,7 @@ msgstr "Estat"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "Prio"
 
 #: ../src/interface.c:214
 msgid "PPID"
@@ -118,11 +119,11 @@ msgstr "Atura"
 
 #: ../src/interface.c:235
 msgid "Continue"
-msgstr "Continuar"
+msgstr "Continua"
 
 #: ../src/interface.c:240
 msgid "Term"
-msgstr "Terme"
+msgstr "Finalitza"
 
 #: ../src/interface.c:245
 msgid "Kill"
@@ -130,72 +131,75 @@ msgstr "Mata"
 
 #: ../src/interface.c:250
 msgid "Priority"
-msgstr ""
+msgstr "Prioritat"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "    5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
-msgstr "Mostra tasques d’usuari"
+msgstr "Mostra les tasques d’usuari"
 
 #: ../src/interface.c:311
 msgid "Show root tasks"
-msgstr "Mostra tasques de superusuari"
+msgstr "Mostra les tasques de superusuari"
 
 #: ../src/interface.c:316
 msgid "Show other tasks"
-msgstr "Mostra altres tasques"
+msgstr "Mostra les altres tasques"
 
 #: ../src/interface.c:321
 msgid "Show memory used by cache as free"
-msgstr ""
+msgstr "Mostra la memòria emprada per la memòia cau com a lliure"
 
 #: ../src/interface.c:342
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask està basat en el Gestor de tasques d'Xfce4 Task Manager fet per:\n"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
-msgstr ""
+msgstr "Crèdits dels traductors"
 
 #: ../src/interface.c:355
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Copyright (C) 2008 de l'equip LXDE"
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Gestor lleuger de tasques del projecte LXDE"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Error"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Confirma"
+
