--- a/po/gl.po
+++ b/po/gl.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the xfce4-taskmanager package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2006.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2006-08-17 19:43+0000\n"
-"Last-Translator: Leandro Regueiro <leandro.regueiro@gmail.com>\n"
+"PO-Revision-Date: 2009-10-05 11:36+0200\n"
+"Last-Translator: Indalecio Freiría Santos <ifreiria@gmail.com>\n"
 "Language-Team: Galician <gl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Pootle 1.1.0\n"
 
 #: ../src/xfce-taskmanager-linux.c:303
 #, c-format
@@ -23,61 +23,64 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Non se puido enviar o sinal %d á tarefa con ID %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "No se puido fixar a prioridade %d á tarefa con ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr ""
+msgstr "Quere matar a tarefa?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr ""
+msgstr "Memoria: %d MB de %d MB usados"
 
 #: ../src/functions.c:142
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr ""
+msgstr "Uso da CPU: %0.0f %%"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "Uso da CPU: %0.0f %%"
 
 #: ../src/interface.c:53
 msgid "Task Manager"
-msgstr ""
+msgstr "Administrador de Tarefas"
 
 #: ../src/interface.c:66
 msgid "_File"
-msgstr ""
+msgstr "_Ficheiro"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr ""
+msgstr "_Ver"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr ""
+msgstr "Ax_uda"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
-msgstr ""
+msgstr "uso da cpu"
 
 #: ../src/interface.c:112
 msgid "memory usage"
-msgstr ""
+msgstr "uso da memoria"
 
 #: ../src/interface.c:140
 msgid "more details"
-msgstr ""
+msgstr "máis detalles"
 
 #: ../src/interface.c:166
 msgid "Command"
-msgstr ""
+msgstr "Orde"
 
 #: ../src/interface.c:172
 msgid "User"
@@ -85,15 +88,15 @@ msgstr "Usuario"
 
 #: ../src/interface.c:178
 msgid "CPU%"
-msgstr ""
+msgstr "% CPU"
 
 #: ../src/interface.c:184
 msgid "RSS"
-msgstr ""
+msgstr "RSS"
 
 #: ../src/interface.c:190
 msgid "VM-Size"
-msgstr ""
+msgstr "Memoria Virtual"
 
 #: ../src/interface.c:196
 msgid "PID"
@@ -105,7 +108,7 @@ msgstr "Estado"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "Prioridade"
 
 #: ../src/interface.c:214
 msgid "PPID"
@@ -113,43 +116,43 @@ msgstr "PPID"
 
 #: ../src/interface.c:230
 msgid "Stop"
-msgstr ""
+msgstr "Deter"
 
 #: ../src/interface.c:235
 msgid "Continue"
-msgstr ""
+msgstr "Continuar"
 
 #: ../src/interface.c:240
 msgid "Term"
-msgstr ""
+msgstr "Finalizar"
 
 #: ../src/interface.c:245
 msgid "Kill"
-msgstr ""
+msgstr "Matar"
 
 #: ../src/interface.c:250
 msgid "Priority"
-msgstr ""
+msgstr "Prioridade"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
@@ -165,36 +168,38 @@ msgstr "Amosar outras tarefas"
 
 #: ../src/interface.c:321
 msgid "Show memory used by cache as free"
-msgstr ""
+msgstr "Mostrar a memoria usada pola cache como libre"
 
 #: ../src/interface.c:342
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask derivase de Xfce4 Task Manager por:\n"
+"* Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
-msgstr ""
+msgstr "Indalecio Freiría <ifreiria@gmail.com>, 2009"
 
 #: ../src/interface.c:355
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Copyright (C) 2008 LXDE team"
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Administrador de tarefas lixeiro para o escritorio LXDE"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Erro"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Confirmar"
