--- a/po/ja.po
+++ b/po/ja.po
@@ -10,13 +10,25 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lxtask 0.1.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-08-27 14:27+0900\n"
+"POT-Creation-Date: 2009-11-01 14:52+0800\n"
 "PO-Revision-Date: 2009-08-27 14:29+0900\n"
 "Last-Translator: Hironao Komatsu <hironao@users.sourceforge.net>\n"
 "Language-Team: Japanese <hironao@users.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: ../lxtask.desktop.in.h:1
+msgid "Manage running processes"
+msgstr "実行中のプロセスを管理します"
+
+#: ../lxtask.desktop.in.h:2
+msgid "Process manager"
+msgstr "プロセスマネージャ"
+
+#: ../lxtask.desktop.in.h:3 ../src/interface.c:58
+msgid "Task Manager"
+msgstr "タスクマネージャ"
 
 #: ../src/xfce-taskmanager-linux.c:303
 #, c-format
@@ -51,10 +63,6 @@ msgstr "メモリ: %2$d MB 中の %1$d MB が使用中"
 #, c-format
 msgid "CPU usage: %0.0f %%"
 msgstr "CPU 使用量: %0.0f %%"
-
-#: ../src/interface.c:58
-msgid "Task Manager"
-msgstr "タスクマネージャ"
 
 #: ../src/interface.c:71
 msgid "_File"
