--- a/po/nl.po
+++ b/po/nl.po
@@ -10,14 +10,15 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2011-09-08 11:34+0200\n"
-"Last-Translator: Pjotr\n"
+"PO-Revision-Date: 2012-01-06 13:37+0200\n"
+"Last-Translator: Pjotr <>\n"
 "Language-Team: Dutch\n"
-"Language: nl (Dutch)\n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
@@ -179,7 +180,7 @@ msgstr "Toon andere taken"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
-msgstr ""
+msgstr "Toon volledige opdrachtregel"
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
