--- a/po/et.po
+++ b/po/et.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2011-09-06 11:02+0200\n"
+"PO-Revision-Date: 2012-01-05 14:03+0200\n"
 "Last-Translator: Anari <anari.jalakas@gmail.com>\n"
 "Language-Team: Gnome Estonian Translation Team <gnome-et linux ee>\n"
 "Language: et\n"
@@ -179,7 +179,7 @@ msgstr "Muud protsessid"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
-msgstr ""
+msgstr "Näita täielikku käsurida"
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
