--- a/po/pt.po
+++ b/po/pt.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2011-05-14 02:22+0200\n"
+"PO-Revision-Date: 2012-01-05 14:42+0200\n"
 "Last-Translator: Sérgio <smarquespt@gmail.com>\n"
 "Language-Team: Portuguese PT\n"
 "Language: pt\n"
@@ -181,7 +181,7 @@ msgstr "Mostrar outras tarefas"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
-msgstr ""
+msgstr "Mostrar linha de comandos integral"
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
