--- a/po/de.po
+++ b/po/de.po
@@ -5,7 +5,7 @@
 # Enrico Tröger <enrico.troeger@uvena.de>, 2006.
 # Fabian Nowak <timystery@arcor.de>, 2007.
 # Mario Blättermann <mariobl@gnome.org>, 2009.
-# Christoph Wickert <christoph.wickert@googlemail.com>, 2009.
+# Christoph Wickert <cwickert@fedoraproject.org>, 2009.
 #
 msgid ""
 msgstr ""
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
 "PO-Revision-Date: 2011-04-26 00:16+0200\n"
-"Last-Translator: Christoph <christoph.wickert@googlemail.com>\n"
+"Last-Translator: Christoph <cwickert@fedoraproject.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
@@ -183,7 +183,7 @@ msgstr "S_onstige Prozesse anzeigen"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
-msgstr ""
+msgstr "_Vollständige Befehlszeile anzeigen"
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
