--- a/po/ro.po
+++ b/po/ro.po
@@ -3,28 +3,28 @@ msgstr ""
 "Project-Id-Version: LXDE\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2010-01-24 11:10-0800\n"
-"Last-Translator: alexxed <alexxed@gmail.com>\n"
+"PO-Revision-Date: 2012-03-07 19:41+0200\n"
+"Last-Translator: Mișu <dumol@l10n.ro>\n"
 "Language-Team: Romanian <LL@li.org>\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms:  nplurals=3; plural=n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < "
-"20)) ? 1 : 2;\n"
-"X-Generator: Narro 0.9.4 on http://tradu.softwareliber.ro\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < "
+"20)) ? 1 : 2);;\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr "Gestionează procesele pornite"
+msgstr "Gestionați programele pornite"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr "Gestionar de procese"
+msgstr "Manager de procese"
 
 #: ../lxtask.desktop.in.h:3 ../src/interface.c:55
 msgid "Task Manager"
-msgstr "Gestionar de procese"
+msgstr "Manager de programe"
 
 #: ../src/xfce-taskmanager-linux.c:271
 #, c-format
@@ -33,32 +33,32 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
-"Nu s-a putut trimite semnalul %d procesului cu numărul %d\n"
+"Nu s-a putut trimite semnalul %d procesului cu ID-ul %d\n"
 "\n"
 "%s"
 
 #: ../src/xfce-taskmanager-linux.c:285
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr "Nu s-a putut seta prioritatea %d pentru procesul cu numărul %d"
+msgstr "Nu s-a putut impune prioritatea %d procesului cu ID-ul %d"
 
 #: ../src/callbacks.c:58
 msgid "Really kill the task?"
-msgstr "Chiar doriți să omorâți procesul?"
+msgstr "Sigur doriți să terminați programul?"
 
 #: ../src/callbacks.c:62
 msgid "Really terminate the task?"
-msgstr "Chiar doriți să terminați procesul?"
+msgstr "Sigur doriți să închideți procesul?"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "Memorie folosită: %d MO din %d MO"
+msgstr "Memorie utilizată: %d MB din %d MB"
 
 #: ../src/functions.c:156
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr "CPU folosit: %0.0f %%"
+msgstr "Utilizare CPU: %0.0f %%"
 
 #: ../src/interface.c:69
 msgid "_File"
@@ -82,7 +82,7 @@ msgstr "memorie utilizată"
 
 #: ../src/interface.c:149
 msgid "more details"
-msgstr "mai multe detalii"
+msgstr "detalii"
 
 #: ../src/interface.c:175
 msgid "Command"
@@ -102,7 +102,7 @@ msgstr "RSS"
 
 #: ../src/interface.c:202
 msgid "VM-Size"
-msgstr "Mărime-VM"
+msgstr "VM"
 
 #: ../src/interface.c:208
 msgid "PID"
@@ -122,19 +122,19 @@ msgstr "PPID"
 
 #: ../src/interface.c:242
 msgid "Stop"
-msgstr "Oprește"
+msgstr "Stop"
 
 #: ../src/interface.c:247
 msgid "Continue"
-msgstr "Continuă"
+msgstr "Continuare"
 
 #: ../src/interface.c:252
 msgid "Term"
-msgstr "Terminare"
+msgstr "Închidere"
 
 #: ../src/interface.c:257
 msgid "Kill"
-msgstr "Omorâre"
+msgstr "Terminare"
 
 #: ../src/interface.c:262
 msgid "Priority"
@@ -162,23 +162,23 @@ msgstr "   10"
 
 #: ../src/interface.c:321
 msgid "Show user tasks"
-msgstr "Arată procesele utilizatorului"
+msgstr "Arată procesele mele"
 
 #: ../src/interface.c:326
 msgid "Show root tasks"
-msgstr "Arată procesele lui root"
+msgstr "Arată procesele root"
 
 #: ../src/interface.c:331
 msgid "Show other tasks"
-msgstr "Arată celelalte procese"
+msgstr "Arată procesele altora"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
-msgstr ""
+msgstr "Arată comenzile complete"
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
-msgstr "Arată memoria tampon ca liberă"
+msgstr "Arată memoria cache ca fiind liberă"
 
 #: ../src/interface.c:373
 msgid ""
@@ -186,12 +186,14 @@ msgid ""
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
 "LXTask e derivat din Xfce4 Task Manager de către:\n"
-" * Johannes Zellner <webmaster@nebulon.de>"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:378
 msgid "translator-credits"
-msgstr "Comunitatea de traducători de pe tradu.softwareliber.ro"
+msgstr ""
+"Comunitatea tradu.softwareliber.ro\n"
+"Mișu Moldovan <dumol@l10n.ro>"
 
 #: ../src/interface.c:387 ../src/interface.c:389
 msgid "LXTask"
@@ -200,11 +202,11 @@ msgstr "LXTask"
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:392
 msgid "Copyright (C) 2008 LXDE team"
-msgstr "Drepturi de autor pe 2008 aparțin echipei LXDE"
+msgstr "Drepturi de autor (C) 2008, Echipa LXDE"
 
 #: ../src/interface.c:393
 msgid "Lightweight task manager for LXDE project"
-msgstr "Gestionar de procese pentru proiectul LXDE"
+msgstr "Manager de procese al proiectului LXDE"
 
 #: ../src/interface.c:621
 msgid "Preferences"
@@ -212,7 +214,7 @@ msgstr "Preferințe"
 
 #: ../src/interface.c:625
 msgid "General"
-msgstr "General"
+msgstr "Generale"
 
 #: ../src/interface.c:626
 msgid "Refresh rate (seconds):"
