--- a/po/fr.po
+++ b/po/fr.po
@@ -9,15 +9,16 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-01-05 15:40+0200\n"
-"Last-Translator: Cilyan <gaknar@gmail.com>\n"
+"PO-Revision-Date: 2013-08-13 09:12+0000\n"
+"Last-Translator: Julien <Julius22@laposte.net>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Pootle 2.0.5\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1376385131.0\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
@@ -57,7 +58,7 @@ msgstr "Vraiment terminer la tâche ?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Impossible pour le processus de s'arrêter"
 
 #: ../src/functions.c:148
 #, c-format
@@ -111,7 +112,7 @@ msgstr "RSS"
 
 #: ../src/interface.c:216
 msgid "VM-Size"
-msgstr "Mémoire"
+msgstr "Mémoire virtuelle"
 
 #: ../src/interface.c:222
 msgid "PID"
@@ -123,7 +124,7 @@ msgstr "État"
 
 #: ../src/interface.c:234
 msgid "Prio"
-msgstr "Prio"
+msgstr "Prio."
 
 #: ../src/interface.c:240
 msgid "PPID"
@@ -194,7 +195,7 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"LXTask est dérivé du Gestionnaire des tâches de Xfce4 par:\n"
+"LXTask est dérivé du gestionnaire des tâches de Xfce4 par :\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
@@ -213,7 +214,7 @@ msgstr "Copyright (C) 2008 LXDE team"
 
 #: ../src/interface.c:407
 msgid "Lightweight task manager for LXDE project"
-msgstr "Gestionnaire des taĉhes léger pour le projet LXDE"
+msgstr "Gestionnaire des tâches léger pour le projet LXDE"
 
 #: ../src/interface.c:635
 msgid "Preferences"
